Funcionalidad asociada a Pacientes

--- a/html/registro-pacientes.html
+++ b/html/registro-pacientes.html
@@ -15,7 +15,7 @@
     <main>
         <h2>Registro pacientes</h2>
         <div class="container-form">
-            <form>
+            <form id="registro-pacientes-form">
                 <label for="nombres">Nombres:</label>
                 <input type="text" id="nombres" name="nombres" required>
                 <label for="apellidos">Apellidos:</label>
@@ -47,6 +47,7 @@
         <h2>Realizado por:</h2>
         <p>Grupo 1 desarrollo web backend</p>
     </footer>
+<script src="../app.js"></script>
 </body>
 
 </html>
