--- a/html/listado-pacientes.html
+++ b/html/listado-pacientes.html
@@ -26,7 +26,7 @@
                     <th>Médico</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="cuerpo-tabla-pacientes">
                 <!-- Se agraga el contenido dinamicamente por medio de JS -->
                 <tr>
                     <td>José</td>
@@ -45,6 +45,7 @@
         <h2>Realizado por:</h2>
         <p>Grupo 1 desarrollo web backend</p>
     </footer>
+    <script src="../app.js"></script>
 </body>
 
 </html>
