Cambios a la apariencia de la página web

--- a/html/listado-medicos.html
+++ b/html/listado-medicos.html
@@ -10,10 +10,10 @@
 
 <body>
     <header>
-        <h1>Centro medico Backend</h1>
+        <h1>Centro Médico Vital Salud</h1>
     </header>
     <main>
-        <h2>Listado médicos</h2>
+        <h2>Listado de médicos</h2>
         <table>
             <thead>
                 <tr>
@@ -41,11 +41,11 @@
                 </tr>
             </tbody>
         </table>
-        <a href="../index.html"><input type="button" value="Volver"></a>
+        <a href="../index.html"><input type="button" value="Volver" class="container-bottom"></a>
     </main>
-    <footer>
+    <footer class="pie-principal">
         <h2>Realizado por:</h2>
-        <p>Grupo 1 desarrollo web backend</p>
+        <p>Jonathan Garavito - Grupo 1 - Desarrollo Web Backend</p>
     </footer>
     <script src="../app.js"></script>
 </body>
