--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="fondo">
         <header>
-            <h1>Centro medico Back-end</h1>
+            <h1>Centro Médico Vital Salud</h1>
         </header>
         <main class="listado-container">
             <ul class="listado-servicios">
@@ -21,9 +21,9 @@
                 <li><a href="html/listado-pacientes.html">Listado de pacientes registrados</a></li>
             </ul>
         </main>
-        <footer>
+        <footer class="pie-principal">
             <h2>Realizado por:</h2>
-            <p>Grupo 1 desarrollo web backend</p>
+            <p>Jonathan Garavito - Grupo 1 Desarrollo Web Backend</p>
         </footer>
     </div>
 </body>
