--- a/html/registro-medicos.html
+++ b/html/registro-medicos.html
@@ -10,10 +10,11 @@
 
 <body>
     <header>
-        <h1>Centro médico Backend ZT</h1>
+        <h1>Centro Médico Vital Salud</h1>
     </header>
     <main>
-        <h2>Registro médicos</h2>
+
+        <h2>Registro de médicos</h2>
         <div class="container-form">
             <form id="registro-medicos-form">
                 <label for="nombres">Nombres:</label>
@@ -40,14 +41,16 @@
                     <option value="Odontología">Odontología</option>
                     <option value="Radiología">Radiología</option>
                 </select>
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" class="container-bottom">
             </form>
-            <a href="../index.html"><input type="button" value="Volver"></a>
+
+            <a href="../index.html"><input type="button" value="Volver" class="container-bottom"></a>
         </div>
+
     </main>
-    <footer>
+    <footer class="pie-principal">
         <h2>Realizado por:</h2>
-        <p>Grupo 1 desarrollo web backend</p>
+        <p>Jonathan Garavito - Grupo 1 - Desarrollo Web Backend</p>
     </footer>
     <script src="../app.js"></script>
 </body>
